Fix white line on header on mobile.

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -14,7 +14,7 @@
             fill: $text-color
     .header-wave
         position: absolute
-        bottom: 0
+        bottom: -2px
         path
             fill: $primary-color
 
